--- a/public/front/css/style_popup_detail.css
+++ b/public/front/css/style_popup_detail.css
@@ -119,7 +119,7 @@
       font-weight: 600;
       font-size: 24px;
       /* color: white !important; */
-      background: #65dc47;
+      background: #20a8d8;
       border-radius: 10px;
       cursor: pointer;
       text-align: center;
